1.0.3+next
    new spacefm-installer replaces self-extrct and install #571
    README rewritten and manual updated for new installer #571
    ifdef malloc_trim for non GlibC libraries #574
    fix HAL build #576; fix older GTK2 build
    Menu and Shift+F10 show side pane menus #575
    Design Menu shown with Menu key in addition to F2 #575
1.0.3   2015-08-26:
    add Devices|Settings|Auto-Mount|Mount Dirs option #548
    proto hand keep %a for lxterminal urxvtc konsole gnome-terminal #552
    convert non-latin keycodes to latin #57
    lang add ltg; update it lt pt_BR
    configure.ac define G_DISABLE_ASSERT to disable g_assert
    rename gphoto handler as ptp; whitelist ptp #555
    [GTK3] add icon chooser dialog #532
    Double-click in icon chooser clicks OK
    [GTK 3.14] Prevent empty rubberband selection GTK3.14 bug avoid #485
    Provide export and import of handler plugin files; update manual #484
    create %O archive in user-selected destination #562
    fix LilyTerm not working correctly eg unzipping file #567
    update spacefm.desktop for protocol handling
1.0.2   2015-06-02:
    toolbar redesign with design mode right-click ability
    add built-in toolbar items: Show Hidden, Show Thumbnails, Large Icons
    fix Compact view sometimes fails to scroll to selected file #502
    malloc_trim calls to flush out the free heap back to the OS when needed
    fix forgets compress handler after extract to #517
    no re-import bookmarks when up-down-upgrade from < 1.0.1
    Missing pixbuf unref in main_task_view_update_task
    Add keyboard shortcut for handler list in handler dialogs
    fix ftp handler ignores custom port in URL #523
    add Run As Task option to file handlers
    allow escape of underscore in item names #522
    fix Item Prop context opposite of Disable is Show instead of Enable
    get mime type icon from .local XML file before guess
    fix right-click on Bookmarks activates bookmark after menu #521